# rust-backend-infra-calc

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  init-minio.sh
src/: auth.rs  config.rs  db.rs  main.rs  middleware.rs  models.rs  session.rs  utils.rs
src/db/: file_repository.rs  purchase_repository.rs  user_repository.rs
src/handlers/: amazon.rs  app.rs  auth.rs  business.rs  download.rs  finance.rs  image.rs  inapp.rs  insert.rs  mod.rs  restore.rs  run_as.rs  save.rs  user_sheet.rs  webapp.rs
src/services/: email.rs  storage.rs
web/static/css/: style.css
web/static/js/: dashboard.js  login.js  main.js  register.js  socialcalcworkbookcontrol.js
web/templates/: allusersheets.html  amazonwebapp.html  base.html  dashboard.html  home.html  importcollabload.html  landing-page.html  login.html  register.html
